# inspection_sim

./: README.md
dji_description/: CMakeLists.txt  package.xml
dji_description/urdf/: dji.gazebo  dji.xacro
dji_gazebo/: CMakeLists.txt  package.xml
dji_gazebo/launch/: dji.launch  dji_rl.launch  tf_pub.launch
dji_gazebo/models/: bridge_model.dae  bridge_model2.stl  robotcity.STL  test_tunnel.stl  tunnel_simple.stl
dji_gazebo/rviz/: dji_sim.rviz
dji_gazebo/worlds/: bridge.world  empty.world  robocity.world  test_tunnel.world  tunnel.world
g2_control/: CMakeLists.txt  package.xml
g2_control/config/: g2_control.yaml
g2_control/include/g2_control/: g2_control.h
g2_control/launch/: g2_control.launch  octo_mapping.launch
g2_control/src/: g2_control.cpp  g2_control_node.cpp
gimbal_control/: CMakeLists.txt  package.xml
gimbal_control/include/gimbal_control/: gimbal_control.h
gimbal_control/launch/: gimbal_control.launch
gimbal_control/src/: gimbal_control.cpp  gimbal_control_node.cpp
inspection_sim/: CMakeLists.txt  package.xml
rl_manager/: CMakeLists.txt  package.xml
rl_manager/include/rl_manager/: rl_manager.h
rl_manager/launch/: rl_manager.launch
rl_manager/src/: rl_manager.cpp  rl_manager_node.cpp
rl_manager/srv/: reset_service.srv
robot_control/: CMakeLists.txt  package.xml
robot_control/include/robot_control/: robot.h
robot_control/launch/: js_control.launch  robot_control.launch
robot_control/src/: js_control_node.cpp  robot.cpp  robot_control_accel.cpp  robot_control_eskf.cpp  robot_control_node.cpp
