<?xml version="1.0"?>
<package>
  <name>g2_control</name>
  <version>0.0.0</version>
  <description>The g2_control package</description>

  <maintainer email="zhenwk@gmail.com">Weikun Zhen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>


</package>
